fixed z-index

--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -88,18 +88,19 @@
     position: fixed;
     width: 100vw;
     height: fit-content;
+    z-index: 1;
   }
 
   .NavBar-HamburgerIcon {
     margin-top: 20px;
     margin-left: 20px;
-    z-index: 2;
+    z-index: 3;
   }
 
   .NavBar-Hamburger {
-    display: visible;
+    /* display: visible; */
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100vw;
     height: fit-content;
     padding-top: 10vh;
